Satt kompilator i makefile til C++11

--- a/project1/makefile
+++ b/project1/makefile
@@ -1,4 +1,6 @@
+CC = g++ -std=c++11
+
 WARN = -Wall -Wextra -Wpedantic
 
-poisson_exact: poisson_exact.cpp
-	g++ $(WARN) -o $@ $^
+poisson_exact.out: poisson_exact.cpp
+	$(CC) $(WARN) -o $@ $^
