--- a/project1/makefile
+++ b/project1/makefile
@@ -2,5 +2,11 @@ CC = g++ -std=c++11
 
 WARN = -Wall -Wextra -Wpedantic
 
+all: poisson_exact.out
+
 poisson_exact.out: poisson_exact.cpp
 	$(CC) $(WARN) -o $@ $^
+
+clean:
+	rm *.out
+.PHONY: clean
