plots are now saved as pdf, minor changes to the run.sh script, initial readme (needs more work) and rough final draft for problem 1-7

--- a/project1/makefile
+++ b/project1/makefile
@@ -19,5 +19,5 @@ poisson_exact.test: poisson_exact.cpp
 	$(CC) $(WARN) -o $@ $^
 
 clean:
-	rm *.out *.test *.dat *.bib *.log *.gz *.aux
+	rm *.out *.test *.bib *.log *.gz *.aux
 .PHONY: clean
