timing.cpp mostly works, some bug fixes

--- a/project1/makefile
+++ b/project1/makefile
@@ -1,8 +1,8 @@
-CC = g++ -std=c++11
+CC = g++ -std=c++14
 
 FLAGS = -Wall -Wextra -Wpedantic -O3
 
-all: poisson_exact.out general_tridiag.out special_tridiag.out
+all: poisson_exact.out general_tridiag.out special_tridiag.out timing.out
 
 poisson_exact.out: poisson_exact.o algorithms.o
 	$(CC) $(FLAGS) -o $@ $^
@@ -11,6 +11,9 @@ general_tridiag.out: general_tridiag.o algorithms.o
 	$(CC) $(FLAGS) -o $@ $^
 
 special_tridiag.out: special_tridiag.o algorithms.o
+	$(CC) $(FLAGS) -o $@ $^
+
+timing.out: timing.o algorithms.o
 	$(CC) $(FLAGS) -o $@ $^
 
 poisson_exact.o: poisson_exact.cpp
@@ -23,6 +26,9 @@ special_tridiag.o: special_tridiag.cpp
 	$(CC) $(FLAGS) -c $^
 
 algorithms.o: algorithms.cpp
+	$(CC) $(FLAGS) -c $^
+
+timing.o: timing.cpp
 	$(CC) $(FLAGS) -c $^
 
 clean:
