The code for problem 10 should work properly:tm: now

--- a/project1/makefile
+++ b/project1/makefile
@@ -2,7 +2,7 @@ CC = g++ -std=c++14
 
 FLAGS = -Wall -Wextra -Wpedantic -O3
 
-all: poisson_exact.out general_tridiag.out special_tridiag.out timing.out
+all: poisson_exact.out general_tridiag.out timing.out
 
 poisson_exact.out: poisson_exact.o algorithms.o
 	$(CC) $(FLAGS) -o $@ $^
@@ -10,8 +10,6 @@ poisson_exact.out: poisson_exact.o algorithms.o
 general_tridiag.out: general_tridiag.o algorithms.o
 	$(CC) $(FLAGS) -o $@ $^
 
-special_tridiag.out: special_tridiag.o algorithms.o
-	$(CC) $(FLAGS) -o $@ $^
 
 timing.out: timing.o algorithms.o
 	$(CC) $(FLAGS) -o $@ $^
@@ -22,8 +20,6 @@ poisson_exact.o: poisson_exact.cpp
 general_tridiag.o: general_tridiag.cpp
 	$(CC) $(FLAGS) -c $^
 
-special_tridiag.o: special_tridiag.cpp
-	$(CC) $(FLAGS) -c $^
 
 algorithms.o: algorithms.cpp
 	$(CC) $(FLAGS) -c $^
