first part of problem 10 done, needs to be looked at, nothing remains

--- a/project3/makefile
+++ b/project3/makefile
@@ -8,7 +8,7 @@ run_simulation.out: run_simulation.o penning_trap.o particle.o
 test_penning.out: test_penning.o penning_trap.o particle.o
 	$(CC) $(FLAGS) -o $@ $^
 
-run_simulation.o: run_simulation.cpp
+run_simulation.o: src/run_simulation.cpp
 	$(CC) $(FLAGS) -c $^
 
 test_penning.o: src/test_penning.cpp
