--- a/project4/makefile
+++ b/project4/makefile
@@ -2,12 +2,12 @@ CC = g++ -std=c++11
 FLAGS = -O3 -larmadillo -I include/
 
 
-all: test_ising.out
+all: run_ising.out
 
-test_ising.out: test_ising.o lattice.o
+run_ising.out: run_ising.o lattice.o
 	$(CC) $(FLAGS) -fopenmp -o $@ $^
 
-test_ising.o: src/test_ising.cpp
+run_ising.o: src/run_ising.cpp
 	$(CC) $(FLAGS) -fopenmp -c $^
 
 lattice.o: src/lattice.cpp
