solved 3. maybe. needs testing.

--- a/project5/makefile
+++ b/project5/makefile
@@ -1,13 +1,13 @@
 CC = g++ -std=c++11
-FLAGS = -Wextra -Wpedantic -Wall -I include/
+FLAGS = -Wextra -Wpedantic -Wall -larmadillo -I include/
 
-test: verify_snippet.out
+test: verify_matrix_lib.out
 
-verify_snippet.out: verify_snippet.o snippets.o
-	$(CC) $(FLAGS) -fopenmp -o $@ $^
+verify_matrix_lib.out: verify_matrix_lib.o matrix_lib.o
+	$(CC) $(FLAGS) -o $@ $^
 
-verify_snippet.o: src/verify_snippet.cpp
+verify_matrix_lib.o: src/verify_matrix_lib.cpp
 	$(CC) $(FLAGS) -c $^
 
-snippets.o: src/snippets.cpp
+matrix_lib.o: src/matrix_lib.cpp
 	$(CC) $(FLAGS) -c $^
