problem 7 mostly solved, weird seg fault after solving all the eqs

--- a/project5/makefile
+++ b/project5/makefile
@@ -1,7 +1,15 @@
 CC = g++ -std=c++11
 FLAGS = -Wextra -Wpedantic -Wall -larmadillo -I include/
 
+main: simulation.out
+
 test: verify_matrix_lib.out
+
+simulation.out: simulation.o matrix_lib.o
+	$(CC) $(FLAGS) -o $@ $^
+
+simulation.o: src/simulation.cpp
+	$(CC) $(FLAGS) -c $^
 
 verify_matrix_lib.out: verify_matrix_lib.o matrix_lib.o
 	$(CC) $(FLAGS) -o $@ $^
